--- a/frontend/components/forms/fields/InputField/_styles.scss
+++ b/frontend/components/forms/fields/InputField/_styles.scss
@@ -5,7 +5,7 @@
   border-radius: $border-radius;
   font-size: $x-small;
   padding: $pad-small $pad-medium;
-  color: $core-fleet-blue;
+  color: $core-fleet-black;
   font-family: "Inter", sans-serif;
   box-sizing: border-box;
   height: 36px;
