--- a/frontend/components/forms/fields/Radio/_styles.scss
+++ b/frontend/components/forms/fields/Radio/_styles.scss
@@ -61,7 +61,7 @@
     width: 16px;
     height: 16px;
     border-radius: 50%;
-    border: 2px solid $ui-fleet-black-10;
+    border: 2px solid $ui-fleet-black-25;
     transform: translateY(-0.05em);
   }
 
