--- a/frontend/components/top_nav/SiteTopNav/_styles.scss
+++ b/frontend/components/top_nav/SiteTopNav/_styles.scss
@@ -124,7 +124,7 @@
       left: 0;
       width: 100%;
       height: 1px;
-      background-color: $core-fleet-black;
+      background-color: $core-fleet-green;
     }
 
     .site-nav-item__name {
